--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+
+
     <title>Decimal-Hexadecimal Converter</title>
 
     <!-- add the css here -->
